--- a/slides/slides-day1-01.html
+++ b/slides/slides-day1-01.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Limitations of graphical elements</title>
+    <title>Perception, reasoning, and credibility</title>
     <meta charset="utf-8" />
-    <meta name="date" content="2022-01-17" />
+    <meta name="date" content="2022-01-18" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/middlebury.css" rel="stylesheet" />
@@ -17,22 +17,22 @@
 
 
 
-
-
-
-
-
 class: right
 
 .left-column[
-![](img/pie-preview.png)
-![](img/stacked-bar-03.png)
+&lt;img src="img/pie-preview.png" alt="pie chart" style="height:200px;"&gt;
+
+&lt;img src="img/dot-chart-preview.png" alt="pie chart" style="width:200px;"&gt;
+
+&lt;img src="img/stacked-bar-03.png" alt="pie chart" style="width:200px;"&gt;
+
+&lt;img src="img/scatterplot-preview.png" alt="pie chart" style="width:200px;"&gt;
 ]
 
 .right-column[
 # Perception, reasoning, and credibility
 
-## Limitations of common visual elements
+## Limitations of common graph types
 
 Richard Layton   
 
@@ -46,7 +46,7 @@ Richard Layton
 ---
 class:inverse, center, middle
 
-# Perception and reasoning
+# Pie charts
 
 
 
@@ -367,6 +367,50 @@ Compare your visual estimates to the data values.
 ---
 class: left
 
+# Graph design should align with one's rhetorical goals
+
+.pull-left[
+In going from this design...
+
+&lt;img src="img/3d-pie-preview.png" alt="pie chart preview" style="height:180px;"&gt;
+]
+
+.pull-right[
+...to this design... 
+
+&lt;img src="img/dot-chart-preview.png" alt="stacked bar preview" style="height:180px;"&gt;
+]
+
+&lt;br&gt;
+
+- we improve the accuracy of the audience's **perception** of the data 
+
+- we make it easier to **reason** quantitatively about the data 
+
+- which should enhance our **credibility** with the audience 
+
+
+
+
+
+
+
+
+
+---
+class:inverse, center, middle
+
+# Bar charts
+
+
+
+
+
+
+
+---
+class: left
+
 # 3D effects always distort our judgment
 
 Make visual estimates of each country's 2021 population. 
@@ -562,7 +606,7 @@ Area encodes no information. The only information in the bar is the position of 
 
 
 
-
+ 
 
 ---
 class: left
@@ -582,7 +626,7 @@ Dot charts are effective replacements for pie charts and bar charts.
 ---
 class: left
 
-# What conclusions do you draw from this chart?
+# Stacked bars: what conclusions would you report?
 
 .left[The survey question was “What was your primary reason for taking this postdoc?”]
 
@@ -604,8 +648,9 @@ class: left
 
 # Stacked-bar charts are a poor choice for multivariate data
 
-We have three variables: year, reason, and percent response. 
+&lt;img src="img/stacked-bar-04.png" alt="stacked bar chart" height="300"&gt;
 
+We have three variables: year, reason, and percent response. 
 
 - Each reason varies over time    
 
@@ -618,15 +663,16 @@ We have three variables: year, reason, and percent response.
 
 
 
+
+
 ---
 class: left
 
-# A matrix of scatterplots allows us to compare evolutions
-
-What conclusions do you draw from this chart?
+# Scatterplots show the evolution of each variable over time
 
 ![](slides-day1-01_files/figure-html/unnamed-chunk-24-1.png)&lt;!-- --&gt;
 
+But are we any closer to seeing a story? What stories (if any) do you see? 
 
 
 
@@ -637,12 +683,41 @@ class: left
 
 # Emphasizing the trivial can obscure a story
 
-Time is trivial in this case. Suppose we ignore it? 
+Time is trivial in this case.   
 
-- We end up with two variables: reasons and a distribution of percent response.     
+&lt;br&gt;
+
+Suppose we ignore the year data.     
+
+- We end up with two variables: reasons and a distribution of percent selecting a reason.      
 
 - The appropriate graph design for distributions is a box-and-whisker plot 
 
+
+&lt;br&gt;
+
+.center[
+
+![](slides-day1-01_files/figure-html/unnamed-chunk-25-1.png)&lt;!-- --&gt;
+
+Conventions of the box and whisker plot
+
+]
+
+
+
+---
+class: left
+
+# What stories do you see? 
+
+- We see the distributions, median values, and spread across all years (1995&amp;ndash;2011). 
+
+- Rows are ordered by the median values. 
+
+&lt;br&gt;
+
+![](slides-day1-01_files/figure-html/unnamed-chunk-26-1.png)&lt;!-- --&gt;
 
 
 
@@ -652,13 +727,28 @@ Time is trivial in this case. Suppose we ignore it?
 ---
 class: left
 
-# You might be able to draw new conclusions...  
+# Graph design should align with one's rhetorical goals
 
-... if the conventions of the box and whisker chart are familiar. 
+.pull-left[
+In going from this design...
 
-&lt;br&gt;
+&lt;img src="img/stacked-bar-03.png" alt="stacked bar preview" style="height:250px;"&gt;
+]
 
-![](slides-day1-01_files/figure-html/unnamed-chunk-25-1.png)&lt;!-- --&gt;
+.pull-right[
+...to this design... 
+
+&lt;img src="img/boxplot-preview.png" alt="stacked bar preview" style="height:250px;"&gt;
+]
+
+- we improve the audience's **perception** of the stories in the data 
+
+- we make it easier to **reason** quantitatively about the data 
+
+- which should enhance our **credibility** with the audience 
+
+
+
 
 
 
@@ -666,7 +756,7 @@ class: left
 ---
 class:inverse, center, middle
 
-# Principles of visual rhetoric
+# Advice from experts
 
 
 
@@ -676,14 +766,70 @@ class:inverse, center, middle
 ---
 class: left
 
-# Jean-Luc Doumont: variables and message
+# Jean-Luc Doumont
+
+.left-column[
+&lt;img src="img/doumont-face.png" alt="Jean-luc Doumont" style="width:250px;"&gt;
+]
+.right-column[
+The optimal graph design depends on two factors, primarily, 
+
+1. The message to be conveyed
+
+2. The variables to be shown
+]
+
+
+.footnote[
+Jean-luc Doumont. *Trees, Maps and Theorems*. Principiae, 2009
+]
+
+
 
 
 
 ---
 class: left
 
-# Edward Tufte: reveal the complex
+# Edward Tufte
+
+.left-column[
+&lt;img src="img/tufte-face.png" alt="Edward Tufte" style="width:250px;"&gt;
+]
+.right-column[
+... the task of the designer is to give 
+
+visual access to the subtle and the difficult&amp;mdash;
+
+that is, the revelation of the complex.
+]
+
+.footnote[
+Edward Tufte. *The Visual Display of Quantitative Information*. Graphics Press, 1983
+]
+
+
+
+---
+class: left
+
+# Stephanie Evergreen
+
+.left-column[
+&lt;img src="img/evergreen-face.png" alt=" Stephanie Evergreen" style="width:250px;"&gt;
+]
+.right-column[
+What’s your point? 
+
+Seriously, that’s the most important question. 
+]
+
+.footnote[
+Stephanie D. H. Evergreen. *Effective Data Visualization: The Right Chart for the Right Data.* Sage, 2017
+]
+
+
+
 
 
 
@@ -691,27 +837,48 @@ class: left
 ---
 class: left
 
-# Stephanie Evergreen: what's your point?
+# Alberto Cairo
+
+.left-column[
+&lt;img src="img/cairo-face.png" alt="Alberto Cairo" style="width:250px;"&gt;
+]
+.right-column[
+Charts can lie to to us because 
+
+we read too much into them or 
+
+see in them what we want to believe. 
+
+&lt;br&gt;
+
+Don't lie to yourself (or others) with charts. 
+]
+
+.footnote[
+Alberto Cairo. *How Charts Lie.* W.W. Norton, 2019
+]
+
+
 
 
 
 ---
 class: left
 
-# Summary
+# Ideas to take away and consider
 
 
-- Understand the data  
+- **Understand** the data structure and content 
 
-- Visually explore the stories in the data   
+- **Explore** a story's context, causality, and complexity
 
-- Explore context and causality; reveal complexity    
+- **Align** visual and verbal logic by revising iteratively 
 
--  to align the logic of the display and your thinking    
+- **Edit** to suit the rhetorical goals for each audience  
 
-- Edit to suit my rhetorical goals for the audience  
+- **Control** every pixel&amp;mdash;avoid thoughtless conformity
 
-- Control every pixel    
+- **Question** are you seeing only what you want to believe?
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
