--- a/slides/slides-day1-01.html
+++ b/slides/slides-day1-01.html
@@ -3,7 +3,7 @@
   <head>
     <title>Perception, reasoning, and credibility</title>
     <meta charset="utf-8" />
-    <meta name="date" content="2022-01-29" />
+    <meta name="date" content="2022-02-14" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/middlebury.css" rel="stylesheet" />
@@ -154,7 +154,7 @@ Estimate the percentage of each pie slice
 &lt;/tbody&gt;
 &lt;/table&gt;
 
-The total should be 100&amp;.
+The total should be 100%.
 ]
 
 &lt;div class="my-footer"&gt;
@@ -964,10 +964,7 @@ class: left
 
 
 
----
-class:inverse, center, middle
 
-Time for think-write-share
 
 
 
@@ -1019,10 +1016,7 @@ Separating reasons into individual panels clarifies the data
 
 
 
----
-class:inverse, center, middle
 
-Time for think-write-share
 
 
 
@@ -1282,7 +1276,7 @@ class: left
 # Ideas to consider
 
 
-- **Understand** the data structure and content 
+- **Characterize** the data structure and content 
 
 - **Explore** a story's context, causality, and complexity
 
